--- a/html/history.html
+++ b/html/history.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/history.css">
+  <link rel="stylesheet" href="../css/hamburger.css">
   <link rel="icon" href="../img/icon.ico">
   <title>冷蔵庫CHECKER</title>
 </head>
 
 <body>
   <header>
+    <!-- ハンバーガーメニューの表記内容です -->
     <nav class="navi_menu">
       <ul class="menu_items">
         <li class="menu_content"><a href="index.html">トップページ</a></li>
@@ -31,33 +33,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Firebaseの情報を記載しています -->
-  <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase.js"></script>
-
-  <script>
-    var firebaseConfig = {
-      apiKey: //大事なコードを入れる場所,
-      authDomain: "refrigeratorcheckapp-20201126.firebaseapp.com",
-      databaseURL: "https://refrigeratorcheckapp-20201126.firebaseio.com",
-      projectId: "refrigeratorcheckapp-20201126",
-      storageBucket: "refrigeratorcheckapp-20201126.appspot.com",
-      messagingSenderId: "975540210223",
-      appId: "1:975540210223:web:6dc842b92545cf2011d4da"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
-  
-  <script>
-  $(function() {
-    $('.navi_icon').click(function() {
-      $(this).toggleClass('active');
-      if ($(this).hasClass('active')) {
-        $('.navi_menu').addClass('active');
-      } else {
-        $('.navi_menu').removeClass('active');
-      }
-    });
-  });
-  </script>
+  <script type="text/javascript" src="../javascript/firebase.js"></script>
+  <!-- ハンバーガーメニューの情報を記載しています -->
+  <script type="text/javascript" src="../javascript/hamburger.js"></script>
 </body>
 </html>
