--- a/html/menu.html
+++ b/html/menu.html
@@ -37,6 +37,7 @@
 
     <span class="icons"></span> <!-- ここに選択した#食材を表記したい -->
 
+    <!-- 本当はfood.htmlでクリックした食材が含まれるレシピだけを表記したかったのですが、知識不足も相まってその機能が追加できませんでした。 -->
     <div class="menu_list">
       <div class="menu">
         <img src="../img/recipe_001.jpg" alt="スタミナ豚バラ丼のイメージ写真">
